[tool.poetry]
name = "pythonbuild-poetry"
version = "0.1.0"
description = ""
authors = ["Josh Taylor <joshuataylorx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

grpcio = [
   {version="==1.47.2", markers="sys_platform != 'darwin' and platform_machine != 'arm64'", source="pythonbuild"},
   {version="==1.47.2", markers="sys_platform == 'darwin' and platform_machine == 'arm64'", source="pypi"},
]

[[tool.poetry.source]]
name = "pythonbuild"
url = "https://python.build/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"